centered my <ul> on page 2, but now the bullet items don't align. Fixing that next.

--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ visibility: visible;
 
 /* CSS for page 2 only */
 
-#combine ul {
+#combine{
   text-align: center;
 }
 
@@ -229,7 +229,7 @@ visibility: visible;
   list-style-type: disc;
   list-style-position: inside;
   text-indent: -1em;
-  padding-left: 1em;
+  padding-left: 1em; 
 }
 
 .imgTwo {
